# docagent

./: .cursor_rules  .gitignore  CONTRIBUTING.md  LICENSE  MCP_SETUP.md  README.md  TODO.md  env.template  pyproject.toml  requirements.txt
docs_agent/: __init__.py  graph.py  server.py  state.py
docs_agent/nodes/: __init__.py  brd_prd.py  cicd_env.py  erd_api.py  frd.py  project_plan.py  release_runbook.py  srd.py  test_strategy.py  trd_tdd.py  ui_wireframes.py
docs_agent/prompts/: brd_prd.md.jinja  cicd_env.md.jinja  design_system.md.jinja  erd.mmd.jinja  frd.md.jinja  openapi.yaml.jinja  project_plan.md.jinja  release_runbook.md.jinja  srd.md.jinja  test_strategy.md.jinja  trd_tdd.md.jinja  wireframes.mmd.jinja
docs_agent/utils/: __init__.py  render.py  safety.py
orchestrator/: __init__.py  graph.py  server.py
scripts/: cli_generate.py  debug_mcp.py  simple_mcp_test.py  test_mcp_servers.py  test_mcp_tools.py  verify_mcp.py
tests/fixtures/: idea_sample.json
